@@ -1731,3 +1731,6 @@ it was in version 3.5, following recommendation of David Geisler-Moroder,
 who pointed out that the revised BTDF increased too much at grazing.
 
 Changed rad behavior with -N >1 on single view to call rpiece.
+
+Updated SCons build system for MINGW compilation, thanks to Christian
+Kohler.
